@@ -1,0 +1,16 @@
+/* Time-stamp: <2010-11-25 23:40:33 Thursday by sarlmolapple> */
+
+/**
+ * @file
+ * @author Sarlmol Apple
+ * @brief Supports Clementine
+ */
+
+#ifndef _OL_PLAYER_CLEMENTINE_H_
+#define _OL_PLAYER_CLEMENTINE_H_
+
+#include "ol_player.h"
+
+struct OlPlayer* ol_player_clementine_get ();
+
+#endif /*_OL_PLAYER_CLEMENTINE_H */
